# rs_web

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _gitignore  build.gradle  package.xml  settings.gradle  setup.py
config/: config.yaml  config_mongodb_chemlab.ini  config_mongodb_openease.ini  lowLvlpipeline.yaml
descriptors/analysis_engines/: chemlab.xml  kitchen.xml  lowlvl.xml  openease.xml  pickandplace.xml  pizza.xml  web.xml
descriptors/annotators/: ClusterToPartsSegmenter.xml  HandleAnnotator.xml  KBResultAdvertiser.xml
descriptors/typesystem/: all_types.xml
example/: queriesForRoboSherlock.json  samplePrologQueries.txt
html/: .gitignore  app.py  controllers.py  models.py  test.html
iai_robosherlock_msgs/: build.gradle
knowrob_robosherlock/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
knowrob_robosherlock/example/: queriesForRoboSherlock.json  sampleQueries.json
knowrob_robosherlock/gradle/wrapper/: gradle-wrapper.properties
knowrob_robosherlock/knowrob_robosherlock/: build.gradle
knowrob_robosherlock/knowrob_robosherlock/src/main/java/org/knowrob/robosherlock/client/: ContextClient.java  RSClient.java
knowrob_robosherlock/owl/: catalog-v001.xml  rs_components.owl  rs_objects.owl
knowrob_robosherlock/prolog/: init.pl  rs_plan_pipeline.pl  rs_query_interface.pl
knowrob_robosherlock/scripts/: generateOWLFromXml.py  queryInterface.py  query_runAE_service.py  registerPackageWithKnowrob.py
knowrob_robosherlock/src/main/java/org/knowrob/robosherlock/client/: RSClient.java
knowrob_robosherlock/src/main/java/org/knowrob/robosherlock/db/: Client.java  RSMongoQuery.java  RSMongoWrapper.java  Scene.java
launch/: knowrob_robosherlock.launch  knowrob_rs_openease.launch  openease_robosherlock.launch  pick_and_place.launch  pick_and_place_no_json.launch  pizza_making.launch  rs_web.launch  rs_web_with_json_prolog.launch  webvis.launch
owl/: PR2.owl  rs_components.owl  rs_components_15_05.owl  rs_objects.owl  test_objects.owl
prolog/: init.pl  knowrob_robosherlock.pl  knowrob_robosherlock.plt  rs_plan_pipeline.pl  rs_query_interface.pl
rs_kbreasoning/: .project  CMakeLists.txt  package.xml
rs_kbreasoning/src/main/java/org/knowrob/robosherlock/client/: ContextClient.java  RSClient.java
rs_kbreasoning/src/main/java/org/knowrob/robosherlock/db/: RSMongoWrapper.java  Scene.java
rs_prolog_interface/: CMakeLists.txt  package.xml
rs_prolog_interface/owl/: rs_iai_objects.owl  rs_objects.owl
rs_prolog_interface/prolog/: init.pl  knowrob_robosherlock.plt  rs_query_interface.pl  rs_similar_objects.pl
rs_queryanswering/: CMakeLists.txt  package.xml  package.xml~
rs_queryanswering/cmake/: rs_queryanswering_config.cmake
rs_queryanswering/config/: config.yaml  config_mongodb_chemlab.ini  config_mongodb_openease.ini  config_mongodb_qa.ini  filter_config.ini  semantic_map_acat.yaml
rs_queryanswering/descriptors/analysis_engines/: chemlab.xml  kitchen.xml  lowlvl.xml  pickandplace.xml  pizza.xml  web.xml
rs_queryanswering/descriptors/annotators/: BeliefToKnowRob.xml  ClusterToPartsSegmenter.xml  GetRenderedViews.xml  OffScreenSceneVariation.xml  TemplateAlignmentAnnotator.xml  UnrealTableScene.xml
rs_queryanswering/descriptors/typesystem/: all_types.xml
rs_queryanswering/include/rs_queryanswering/: DesignatorWrapper.h  JsonPrologInterface.h  KRDefinitions.h  MSSegmenter.h  PrologInterface.h  QueryInterface.h  RSControledAnalysisEngine.h  RSObjDescriptionRefiner.h  RSProcessManager.h
rs_queryanswering/include/rs_queryanswering/types/: all_types.h  type_definitions.h
rs_queryanswering/launch/: knowrob_robosherlock.launch  knowrob_rs_openease.launch  openease_robosherlock.launch  pick_and_place.launch  pick_and_place_no_json.launch  pizza_making.launch  webvis.launch
rs_queryanswering/src/: ClusterToPartsSegmenter.cpp  DesignatorWrapper.cpp  JsonPrologInterface.cpp  MSSegmenter.cpp  PrologInterface.cpp  PrologQueries.cpp  QueryInterface.cpp  RSControledAnalysisEngine.cpp  RSProcessManager.cpp  TemplateAlignment.cpp  ms_test.cpp  runAECpp.cpp  swiprologinterpreter.cpp
rs_queryanswering/src/annotators/: BeliefToKnowRob.cpp  CMakeLists.txt  ClusterToPartsSegmenter.cpp  GetRenderedViews.cpp  HandleAnnotator.cpp  HandleExtractor.cpp  OffScreenSceneVariation.cpp  TemplateAlignmentAnnotator.cpp  UnrealTableScene.cpp  handle_extractor.cpp
rs_web/: CMakeLists.txt  package.xml  setup.py
rs_web/html/: app.cfg  app.py  controllers.py  forms.py  index.html  models.py  queriesForEASE.json  queriesForRoboSherlock.json  rs_live.html  scenes.html  testQueries.json
rs_web/html/lib/: myJquery.js  myScripts.js  test.css
rs_web/html/lib/jquery/: myJquery.js
rs_web/html/lib/knowrob/: desig.js  knowrob.js
rs_web/html/lib/ros/: Ros3D.js
rs_web/html/source/: MonogClient.py  PySWIPWrapper.py  RSMongoClient.py  gen_stat.py  mongoclient.py  parser.py  result_analysis.py
rs_web/html/static/: robosherlock.js  web.css
rs_web/html/static/js/: RSWelcomeAnimation.js  myScripts.js  robosherlock.js
rs_web/html/static/js/knowrob/: knowrob.js
rs_web/html/static/queries/: queriesForEASE.json
rs_web/html/static/style/: mainPage.css  user.css  web.css
rs_web/html/style/: screen.css
rs_web/html/templates/: base.html  bkup.html  emptyPage.html  index.html  macros.html  objStore.html  object_store.html  object_store_dev.html  object_store_devel.html  objects.html  one_scene.html  rs_live.html  scenes.html  startup.html
rs_web/include/rs_web/: client_http.hpp  server_http.hpp
rs_web/launch/: knowrob_rs_openease.launch  rs_web.launch  rs_web_with_json_prolog.launch
rs_web/prolog/: init.pl
rs_web/src/: http_server.cpp
scripts/: generateOWLFromXml.py  query_runAE_service.py  registerPackageWithKnowrob.py
src/: ClusterToPartsSegmenter.cpp  DesignatorWrapper.cpp  JsonPrologInterface.cpp  PrologQueries.cpp  RSControledAEManager.cpp  RSControledAnalysisEngine.cpp  RSPipelineManager.cpp  RSProcessManager.cpp  ResultAdvertiser.cpp  TemplateAlignment.cpp  TemplateAlignmentAnnotator.cpp  http_server.cpp  runAECpp.cpp
(+33 files in other folders)
