<?xml version="1.0"?>
<package format="1">
  <name>rs_kbreasoning</name>
  <version>0.1.0</version>
  <description>rs_kbreasoning holds all the necessary parts for enabling knowledge based query-answering for RoboSherlock
  </description>

  <maintainer email="balintbe@cs.uni-bremend.de">Ferenc Balint-Benczedi</maintainer>
  <author>Ferenc Balint-Benczedi</author>
  <author>Patrick Mania</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>knowrob_robosherlock</run_depend>
  <run_depend>rs_queryanswering</run_depend>
  
  <export>
    <metapackage />
  </export>
</package>
