<?xml version="1.0"?>
<package format="2">
  <name>rs_prolog_interface</name>
  <version>0.1.0</version>
  <description>package holding prolog rules relating to robosherlock
		- parsing queries and calling rules implemented in C++
  </description>

  <maintainer email="balintbe@cs.uni-bremend.de">Ferenc Balint-Benczedi</maintainer>
  <author>Ferenc Balint-Benczedi</author>
  <author>Patrick Mania</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>designator_integration_msgs</depend>
  <depend>iai_robosherlock_msgs</depend> 
  <depend>knowrob_common</depend>
  <depend>knowrob_vis</depend>
  <depend>knowrob_actions</depend>
  <depend>knowrob_srdl</depend>
  <depend>json_prolog</depend>

</package>
