<?xml version="1.0"?>
<package format="2">
  <name>rs_queryanswering</name>
  <version>0.1.0</version>
  <description>The robosherlock knowledge processing package</description>

  <maintainer email="balintbec@cs.uni-bremend.de">Ferenc Balint-Benczedi</maintainer>
  <author>Ferenc Balint-Benczedi</author>
  <author>Patrick Mania</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rosjava_build_tools</depend>
  <depend>designator_integration_msgs</depend>
  <depend>iai_robosherlock_msgs</depend> 
  <depend>knowrob_common</depend>
  <depend>knowrob_vis</depend>
  <depend>knowrob_actions</depend>
  <depend>knowrob_srdl</depend>
  <depend>json_prolog</depend>
  <depend>robosherlock</depend>
  <depend>robosherlock_demos</depend>
  <depend>designator_integration_cpp</depend>
  <depend>image_transport</depend>
  <depend>rs_simulation</depend>
  

</package>
