<?xml version="1.0"?>
<package>
  <name>rs_web</name>
  <version>0.0.0</version>
  <description>The rs_web package. A web frontend for interacting with RoboSherlock and inspecting results.</description>

  <maintainer email="balintbe@cs.uni-bremen.de">Ferenc Balint-Benczedi</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>robosherlock_knowrob</build_depend>
  <build_depend>robosherlock_msgs</build_depend>
 
  <run_depend>robosherlock_knowrob</run_depend>
  <run_depend>robosherlock_msgs</run_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>web_video_server</run_depend>
  <run_depend>tf2_web_republisher</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
